--- a/assets/css/tc.css
+++ b/assets/css/tc.css
@@ -41,22 +41,22 @@
     color: var(--text-black);
 }
 
-.tc-section ol > li {
+.tc-section ol>li {
     margin-bottom: 15px;
     position: relative;
     padding-left: 10px;
 }
 
-.tc-section ol > li ol {
+.tc-section ol>li ol {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.tc-section ol > li ol > li {
+.tc-section ol>li ol>li {
     margin-bottom: 8px;
 }
 
-.tc-btn{
+.tc-btn {
     background: var(--white);
     color: var(--dark-blue);
     border: 2px solid var(--dark-blue);
@@ -79,14 +79,23 @@
     }
 
     .tc-header h1 {
-        font-size: 2rem;
+        font-size: 1rem;
+        margin-bottom: 10px;
+    }
+
+    .tc-section h2 {
+        font-size: 0.9rem;
+        margin-bottom: 20px;
+        font-weight: 600;
     }
 
     .tc-content {
         padding: 25px;
+        font-size: 0.8rem;
     }
 
-    .tc-section h2 {
-        font-size: 1.3rem;
+    .tc-btn {
+        padding: 10px 15px;
+        font-size: 0.9rem;
     }
 }
