--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -1,3 +1,26 @@
+/* Font Declarations */
+@font-face {
+    font-family: 'Gunterz';
+    src: url('../font/Gunterz/TTF/Gunterz-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gunterz';
+    src: url('../font/Gunterz/TTF/Gunterz-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gunterz';
+    src: url('../font/Gunterz/TTF/Gunterz-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+/* Root Variables */
 :root {
     --primary: #ffefdb;
     --nav-background: #1a237e;
@@ -10,4 +33,9 @@
     --text-gray: #808080;
     --light-blue: #ADD8E6;
     --sky-blue: #87CEEB;
+    --dark-gray: #333;
+    --light-gray: #f5f5f5;
+    --gray:gray;
+    --font-primary: 'Gunterz', sans-serif;
+    --font-secondary: 'Gunterz', sans-serif;
 }
